--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@ehmpathy/error-fns": "1.0.2",
     "domain-glossaries": "1.0.0",
     "domain-objects": "0.24.2",
-    "phone": "3.1.55"
+    "phone": "3.1.55",
+    "type-fns": "1.19.0"
   },
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
