feat(href): support cast phone to href

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "domain-glossaries": "1.0.0",
     "domain-objects": "0.24.2",
     "phone": "3.1.55",
+    "test-fns": "1.5.0",
     "type-fns": "1.19.0"
   },
   "devDependencies": {
